Different maps and points

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="hibrida">Hibrida</string>
     <string name="poli">Polilinea</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="multiple_destinations">Destinos múltiples</string>
+    <string name="selectPointsRouteActivity">Seleccionar puntos de ruta</string>
 </resources>
